...
                        }`}
                      >
                        {isTogglingReady
                          ? "..."
                          : myPlayerReady
                            ? "Not Ready"
                            : "I'm Ready!"}
                      </button>
                    </div>
                  )
                ) : null}

                {game?.status === "active" &&
...
